--- a/ImageLab10/index.html
+++ b/ImageLab10/index.html
@@ -5,11 +5,17 @@
   </head>
   <body>
     <a-scene>
-      <a-box position="-1 0.5 -3" rotation="0 45 0" color="#4CC3D9"></a-box>
-      <a-sphere position="0 1.25 -5" radius="1.25" color="#EF2D5E"></a-sphere>
-      <a-cylinder position="1 0.75 -3" radius="0.5" height="1.5" color="#FFC65D"></a-cylinder>
-      <a-plane position="0 0 -4" rotation="-90 0 0" width="4" height="4" color="#7BC8A4"></a-plane>
-      <a-sky color="#ECECEC"></a-sky>
+      <a-cone src="./assets/2148210176.jpg"position="0 1.2 -3" rotation="180 0 0"radius-bottom="0.5" radius-top="0.05" height="1" color="#d9a066"></a-cone>
+      <a-sphere src="./assets/icing-frosting-texture-background-close-up.jpg" position="0 1.8 -3" radius="0.45" color="#f8b8b8"></a-sphere> 
+      <a-sphere src="./assets/icing-frosting-texture-background-close-up.jpg" position="0 2 -3" radius="0.4" color="#F3E5AB"></a-sphere>
+      <a-sphere src="./assets/icing-frosting-texture-background-close-up.jpg" position="0 2.3 -3" radius="0.3" color="#704214"></a-sphere> 
+
+
+      <a-sphere src="./assets/4d008d0b3d28e661005d01a180cc99986efac41f.jpeg" position="2 0.5 -3" radius="0.5" color="#ffffff"></a-sphere> 
+      
+      <a-plane src="./assets/jim-gade-eYWNaMffWHI-unsplash.jpg" position="0 0 -3" rotation="-90 0 0" width="6" height="6"></a-plane>
+
+      <a-sky src="../ImageLab10/assets/aerial-drone-panorama-view-nature-moldova-sunset-village-wide-fields-valleys.jpg"></a-sky>
     </a-scene>
   </body>
 </html>
