--- a/ImageLab10/index.html
+++ b/ImageLab10/index.html
@@ -16,7 +16,7 @@
       
       <a-plane src="./assets/jim-gade-eYWNaMffWHI-unsplash.jpg" position="0 0 -3" rotation="-90 0 0" width="6" height="6"></a-plane>
 
-      <a-sky src="../ImageLab10/assets/aerial-drone-panorama-view-nature-moldova-sunset-village-wide-fields-valleys.jpg"></a-sky>
+      <a-sky src="../ImageLab10/assets/background funny.png"></a-sky>
     </a-scene>
   </body>
 </html>
